--- a/Project-2--Reproducible-Research.html
+++ b/Project-2--Reproducible-Research.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2025-03-20" />
 
-<title>Storm Types Effects on Population Health and Econmoic Loss: what weather events are the most harmful?</title>
+<title>Storm Types Effects on Population Health and Economic Loss: What weather events are the most impactful?</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -351,7 +351,7 @@ display: none;
 
 
 <h1 class="title toc-ignore">Storm Types Effects on Population Health
-and Econmoic Loss: what weather events are the most harmful?</h1>
+and Economic Loss: What weather events are the most impactful?</h1>
 <h4 class="author">Kimberly Bormann</h4>
 <h4 class="date">2025-03-20</h4>
 
